--- a/app/views/tracks/_new_track.html.haml
+++ b/app/views/tracks/_new_track.html.haml
@@ -81,7 +81,7 @@
             %span.col-sm-3.control-label
               = t('static_pages.index.track_form.suit')
             .col-sm-9
-              %select.new-track-wingsuit-select{name: 'track[wingsuit_id]'}
+              %select.new-track-wingsuit-select{name: 'wingsuit_id'}
 
               -# = text_field_tag 'suit', nil, :class => 'form-control wingsuit-autocomplete', :placeholder => t('static_pages.index.track_form.suit_plh'), :type => 'text'
               -# = hidden_field_tag 'wingsuit_id', nil, :id => 'wingsuit-id'
