--- a/app/views/tracks/edit.html.haml
+++ b/app/views/tracks/edit.html.haml
@@ -1,15 +1,19 @@
-.track-edit-data{track_edit_data_attr}
+.track-edit-data{data: track_edit_data_attr}
 
 .container.top-buffer
-  = form_for @track, :html => {:class => 'form-horizontal', :role => 'form', :id => 'track_edit_form'} do |f|
+  = form_for @track, html: {class:  'form-horizontal', role: 'form', id: 'track_edit_form'} do |f|
 
     .row
       .col-sm-11
-        = f.submit t('general.save'), :class => 'btn btn-success'
-        = link_to t('general.cancel'), @track, :class => 'btn btn-default'
+        = f.submit t('general.save'), class:  'btn btn-success'
+        = link_to t('general.cancel'), @track, class:  'btn btn-default'
       .col-sm-1
         .pull-right
-          = link_to t('general.delete'), @track, :method => :delete, :data => {:confirm => t('tracks.show.delete_confirmation')}, :class => 'btn btn-danger'
+          = link_to t('general.delete'),
+                    @track,
+                    :method => :delete,
+                    :data => {:confirm => t('tracks.show.delete_confirmation')},
+                    class:  'btn btn-danger'
 
     %hr
 
@@ -25,7 +29,7 @@
       %span.col-sm-2.control-label
         = t('static_pages.index.track_form.name')
       .col-sm-4
-        = f.text_field 'name', :class => 'form-control', :placeholder => t('static_pages.index.track_form.name_plh'), :type => 'text'
+        = f.text_field 'name', class: 'form-control', placeholder: t('static_pages.index.track_form.name_plh'), type: 'text'
     .form-group
       %span.col-sm-2.control-label
         = t('static_pages.index.track_form.suit')
@@ -36,17 +40,17 @@
       %span.col-sm-2.control-label
         = t('static_pages.index.track_form.location')
       .col-sm-4
-        = f.text_field 'location', :class => 'form-control', :placeholder => t('static_pages.index.track_form.location_plh'), :type => 'text'
+        = f.text_field 'location', class: 'form-control', placeholder: t('static_pages.index.track_form.location_plh'), type: 'text'
 
     .form-group
       %span.col-sm-2.control-label
         = t('static_pages.index.track_form.kind')
       .btn-group.col-sm-10{:data => {:toggle => 'buttons'}}
-        %label.btn.btn-default{ :class => ('active' if @track.skydive?) }
+        %label.btn.btn-default{ class:  ('active' if @track.skydive?) }
           = f.radio_button 'kind', 'skydive'
           = 'Skydive'
 
-        %label.btn.btn-default{ :class => ('active' if @track.base?) }
+        %label.btn.btn-default{ class:  ('active' if @track.base?) }
           = f.radio_button 'kind', 'base'
           = 'B.A.S.E'
 
@@ -54,20 +58,23 @@
       %span.col-sm-2.control-label
         = t('static_pages.index.track_form.comment')
       .col-sm-4
-        = f.text_area 'comment', :class => 'form-control', :rows => 3, :placeholder => t('static_pages.index.track_form.comment_plh')
+        = f.text_area 'comment',
+                      class: 'form-control',
+                      rows: 3,
+                      placeholder: t('static_pages.index.track_form.comment_plh')
 
     - if user_signed_in?
       .form-group
         %span.col-sm-2.control-label
           = t('tracks.edit.visibility')
-        .btn-group.col-sm-10{:data => {:toggle => 'buttons'}}
-          %label.btn.btn-default{ :class => ('active' if @track.public_track?) }
+        .btn-group.col-sm-10{data: {toggle: 'buttons'}}
+          %label.btn.btn-default{ class:  ('active' if @track.public_track?) }
             = f.radio_button 'visibility', 'public_track'
             = t('tracks.edit.public')
-          %label.btn.btn-default{ :class => ('active' if @track.unlisted_track?) }
+          %label.btn.btn-default{ class:  ('active' if @track.unlisted_track?) }
             = f.radio_button 'visibility', 'unlisted_track'
             = t('tracks.edit.unlisted')
-          %label.btn.btn-default{ :class => ('active' if @track.private_track?) }
+          %label.btn.btn-default{ class:  ('active' if @track.private_track?) }
             = f.radio_button 'visibility', 'private_track'
             = t('tracks.edit.private')
 
@@ -78,10 +85,14 @@
     %hr
     .row
       .col-sm-11
-        = f.submit t('general.save'), :class => 'btn btn-success'
-        = link_to t('general.cancel'), @track, :class => 'btn btn-default'
+        = f.submit t('general.save'), class: 'btn btn-success'
+        = link_to t('general.cancel'), @track, class: 'btn btn-default'
       .col-sm-1
         .pull-right
-          = link_to t('general.delete'), @track, :method => :delete, :data => {:confirm => t('tracks.show.delete_confirmation')}, :class => 'btn btn-danger'
+          = link_to t('general.delete'),
+                    @track,
+                    method: :delete,
+                    data: {confirm: t('tracks.show.delete_confirmation')},
+                    class: 'btn btn-danger'
 
   .top-buffer
