--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -2,33 +2,33 @@
   .tracks-index
   .page-header
     %h1=t '.title'
-    .pull-right
-      - kind = :all
-      - if params[:filter] && params[:filter][:kind]
-        - kind = :skydive if params[:filter][:kind] == 'skydive'
-        - kind = :base if params[:filter][:kind] == 'base'
-      .form-group
-        .btn-group.btn-group-sm{data: {toggle: 'buttons'}}
-          %label.btn.btn-default{class: ('active' if kind == :all)}
-            %input#tracks-all{type: 'radio', 
-                              name: 'filter[kind]', 
-                              value: 'all', 
-                              autocomplete: 'off',
-                              checked: kind == :all}
-            = 'All'
-          %label.btn.btn-default{class: ('active' if kind == :skydive)}
-            %input#tracks-skydive{type: 'radio', 
-                                  name: 'filter[kind]', 
-                                  value: 'skydive', 
-                                  autocomplete: 'off',
-                                  checked: kind == :skydive}
-            = 'Skydive'
-          %label.btn.btn-default{class: ('active' if kind == :base)}
-            %input#tracks-base{type: 'radio', 
-              name: 'filter[kind]', 
-              value: 'base', 
-              autocomplete: 'off'}
-            = 'B.A.S.E.'
+  .row
+    -# - kind = :all
+    -# - if params[:filter] && params[:filter][:kind]
+    -#   - kind = :skydive if params[:filter][:kind] == 'skydive'
+    -#   - kind = :base if params[:filter][:kind] == 'base'
+    -# .form-group
+    -#   .btn-group.btn-group-sm{data: {toggle: 'buttons'}}
+    -#     %label.btn.btn-default{class: ('active' if kind == :all)}
+    -#       %input#tracks-all{type: 'radio', 
+    -#                         name: 'filter[kind]', 
+    -#                         value: 'all', 
+    -#                         autocomplete: 'off',
+    -#                         checked: kind == :all}
+    -#       = 'All'
+    -#     %label.btn.btn-default{class: ('active' if kind == :skydive)}
+    -#       %input#tracks-skydive{type: 'radio', 
+    -#                             name: 'filter[kind]', 
+    -#                             value: 'skydive', 
+    -#                             autocomplete: 'off',
+    -#                             checked: kind == :skydive}
+    -#       = 'Skydive'
+    -#     %label.btn.btn-default{class: ('active' if kind == :base)}
+    -#       %input#tracks-base{type: 'radio', 
+    -#                         name: 'filter[kind]', 
+    -#                         value: 'base', 
+    -#                         autocomplete: 'off'}
+    -#       = 'B.A.S.E.'
 
   -# .col-md-9.col-lg-9
   %table#tracks-index.table.table-hover
@@ -39,12 +39,12 @@
         %th=t 'activerecord.attributes.track.suit'
         %th=t 'activerecord.attributes.track.place'
         %th=t 'activerecord.attributes.track.comment'
-        %th.text-center.bg-info
-          %i.fa.fa-fw.fa-lg.fa-arrows-h
-        %th.text-center.bg-warning
-          %i.fa.fa-fw.fa-lg.fa-long-arrow-right
-        %th.text-center.bg-success
-          %i.fa.fa-fw.fa-lg.fa-clock-o
+        -# %th.text-center.bg-info
+        -#   %i.fa.fa-fw.fa-lg.fa-arrows-h
+        -# %th.text-center.bg-warning
+        -#   %i.fa.fa-fw.fa-lg.fa-long-arrow-right
+        -# %th.text-center.bg-success
+        -#   %i.fa.fa-fw.fa-lg.fa-clock-o
         %th=t 'activerecord.attributes.track.uploaded_at'
     %tbody
       - @tracks.each do |track|
@@ -54,9 +54,9 @@
           %td.text-info= track.wingsuit.present? ? track.wingsuit.name : track.suit
           %td.text-info= track.location
           %td.text-muted= track.comment
-          %td.text-info.text-right.bg-info= track.distance.result.to_i if track.distance
-          %td.text-info.text-right.bg-warning= track.speed.result.to_i if track.speed
-          %td.text-info.text-right.bg-success= track.time.result if track.time
+          -# %td.text-info.text-right.bg-info= track.distance.result.to_i if track.distance
+          -# %td.text-info.text-right.bg-warning= track.speed.result.to_i if track.speed
+          -# %td.text-info.text-right.bg-success= track.time.result if track.time
           %td.text-info= track.created_at.strftime('%d.%m.%Y')
   -# .col-md-3.col-lg-3
   -#   %form#tracks-filters
