--- a/app/views/user_profile/show.html.haml
+++ b/app/views/user_profile/show.html.haml
@@ -66,9 +66,9 @@
             %th= t('activerecord.attributes.track.id')
             %th= t('activerecord.attributes.track.suit')
             %th= t('activerecord.attributes.track.place')
-            %th= 'Дистанция'
-            %th= 'Скорость'
-            %th= 'Время'
+            %th= 'Distance'
+            %th= 'Speed'
+            %th= 'Time'
             %th= t('activerecord.attributes.track.comment')
             %th= t('activerecord.attributes.track.uploaded_at')
         %tbody
@@ -77,6 +77,9 @@
               %td.text-info= track.id
               %td.text-info= track.suit
               %td.text-info= track.location
+              %td.text-info= track.distance
+              %td.text-info= track.speed
+              %td.text-info= track.time
               %td.text-muted= track.comment
               %td.text-info= track.created_at
 
