--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -36,6 +36,10 @@ body, p, ol, ul, td {
   padding: 0 0 100px;
 }
 
+label.valid {
+  display: none !important;
+}
+
 .img-50 {
   height: 32px;
   width: 32px;
