--- a/app/views/user_profile/show.html.haml
+++ b/app/views/user_profile/show.html.haml
@@ -66,9 +66,9 @@
             %th= t('activerecord.attributes.track.id')
             %th= t('activerecord.attributes.track.suit')
             %th= t('activerecord.attributes.track.place')
-            %th= 'Distance'
-            %th= 'Speed'
-            %th= 'Time'
+            %th= t('disciplinse.distance')
+            %th= t('disciplinse.speed')
+            %th= t('disciplinse.time')
             %th= t('activerecord.attributes.track.comment')
             %th= t('activerecord.attributes.track.uploaded_at')
         %tbody
