--- a/app/views/user_profile/show.html.haml
+++ b/app/views/user_profile/show.html.haml
@@ -17,7 +17,7 @@
               = @profile.user.email
 
         .col-md-1
-          - if current_user.user_profile == @profile
+          - if current_user && current_user.user_profile == @profile
             = link_to content_tag(:span, nil, :class => 'fa fa-pencil'),
                       edit_user_registration_path,
                       :class => 'btn btn-default edit'
