--- a/app/assets/stylesheets/virtual_competitions.css.scss
+++ b/app/assets/stylesheets/virtual_competitions.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the VirtualCompetitions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.vc-profile-name {
+  font-size: 1.4em;
+}
+.vc-result {
+  font-size: 3em;
+}
+.vc-unit {
+  font-size: 2em;
+}
