--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -39,3 +39,15 @@
   width: 100%;
   margin-top: -20px;
 }
+
+.gold {
+  color: #D9D919;
+}
+
+.silver {
+  color: silver;
+}
+
+.bronze {
+  color: #CD7F32;
+}
