--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %title= page_title(yield(:title))
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = csrf_meta_tags
-    %meta{name:"viewport", content:"width=980, height=device-height, initial-scale=1.0"}
+    -# %meta{name:"viewport", content:"width=980, height=device-height"}
   %body
     :javascript
       var I18n = I18n || {};
