--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -45,70 +45,5 @@
         %th=t 'activerecord.attributes.track.uploaded_at'
     %tbody
       = render @tracks
-      -# - @tracks.each do |track|
-      -#   %tr.clickableRow{data: {url: track_path(id: track.id)}}
-      -#     %td.text-info= track.id
-      -#     %td.text-info= track.name
-      -#     %td
-      -#       - if track.wingsuit
-      -#         - manufacturer = track.wingsuit.manufacturer
-      -#         %span.text-warning{data: {toggle: 'tooltip'}, title: manufacturer.name}
-      -#           = manufacturer.code
-      -#         %span.text-info
-      -#           = track.wingsuit.name 
-      -#       - else 
-      -#         %span.text-info
-      -#           = track.suit
-      -#     %td.text-info= track.location
-      -#     %td.text-muted= track.comment
-      -#     %td.text-right
-      -#       %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.distance)}
-      -#         = track.distance.result.to_i if track.distance
-      -#     %td.text-right
-      -#       %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.speed)}
-      -#         = track.speed.result.to_i if track.speed
-      -#     %td.text-right
-      -#       %span.text-info{data: {toggle: 'tooltip'}, title: range_title(track.time)}
-      -#         = track.time.result if track.time
-      -#     %td.text-info= track.created_at.strftime('%d.%m.%Y')
-  = will_paginate @tracks
-  -# .col-md-3.col-lg-3
-  -#   %form#tracks-filters
-  -#     .form-group
-  -#       %span.control-label= 'Suit:'
-  -#       %input#wingsuit-filter.form-control.wingsuit-autocomplete{data: {idfield: '#wingsuit-filter-id'}}
-  -#       %input#wingsuit-filter-id{type: 'hidden', name: 'filter[suit]'}
-  -#     .form-group
-  -#       %span.control-label= 'Place:'
-  -#       %input#place-filter.form-control.place-autocomplete{data: {idfield: 'place-filter-id'}}
-  -#       %input#place-filter-id{type: 'hidden', name: 'filter[place]'} 
-  -#     .checkbox 
-  -#       %label
-  -#         %input#event-tracks-only{type: 'checkbox'}
-  -#         = 'Только соревновательные'
-    -# %ul.track-list
-    -#   - @tracks.each do |track|
-    -#     %li.track-list-item
-    -#       .pull-right.track-stats
-    -#         %i.fa.fa-fw.fa-lg.fa-arrows-h
-    -#         = track.distance.result if track.distance
-    -#         %i.fa.fa-fw.fa-lg.fa-long-arrow-right
-    -#         = track.speed.result if track.speed
-    -#         %i.fa.fa-fw.fa-lg.fa-clock-o
-    -#         = track.time.result if track.time
-    -#         .text-right
-    -#           - if track.competitive
-    -#             = '#' + 'соревновательный'
-    -#           = '#' + track.kind
-    -#
-    -#       %a{href: track_path(id: track.id)}
-    -#         %h3
-    -#           = track.id.to_s + ' | '
-    -#           = track.name
-    -#           = track.wingsuit.present? ? track.wingsuit.name : track.suit
-    -#           = '@' + track.location
-    -#       %p
-    -#         = track.comment
-    -#         = track.created_at.strftime('%d.%m.%Y')
-    -#
 
+  = will_paginate @tracks, renderer: BootstrapPagination::Rails
